<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_primary"
    android:padding="@dimen/screen_padding">

    <!-- Header -->
    <ImageView
        android:id="@+id/iconAsterisk"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:src="@drawable/ic_asterisk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Logo" />

    <ImageView
        android:id="@+id/iconMenu"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Menu" />

    <!-- Title -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/wallet_title"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_title"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconAsterisk" />

    <!-- Up Arrow -->
    <ImageView
        android:id="@+id/iconArrowUp"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        android:contentDescription="Previous card" />

    <!-- Card Container -->
    <FrameLayout
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/spacing_lg"
        android:layout_marginStart="@dimen/spacing_xl"
        android:background="@drawable/card_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconArrowUp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_padding">

            <!-- Card Label -->
            <TextView
                android:id="@+id/textCardLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_card"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_sm"
                android:fontFamily="monospace"
                android:letterSpacing="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Card Logo (Mastercard-style circles) -->
            <ImageView
                android:id="@+id/cardLogo"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_card_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="Card logo" />

            <!-- Card Number -->
            <TextView
                android:id="@+id/textCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number_masked"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_md"
                android:fontFamily="monospace"
                android:letterSpacing="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <!-- Eye Icon -->
    <ImageView
        android:id="@+id/iconEye"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:layout_marginTop="@dimen/spacing_lg"
        android:src="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardContainer"
        android:contentDescription="Toggle visibility" />

    <!-- Down Arrow -->
    <ImageView
        android:id="@+id/iconArrowDown"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:layout_marginTop="@dimen/spacing_lg"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconEye"
        android:contentDescription="Next card" />

    <!-- FAB Button -->
    <FrameLayout
        android:id="@+id/fabAdd"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginBottom="@dimen/spacing_xl"
        android:background="@drawable/fab_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_gravity="center"
            android:src="@drawable/ic_plus"
            android:contentDescription="Add card" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
